<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    tools:context=".MainActivity">

    <TextView
        android:textSize="30sp"
        android:textColor="#E62969"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="20dp"
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />

    <EditText
        android:id="@+id/edt_FullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/full_name"
        android:autofillHints="@string/full_name"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:autofillHints="@string/email"
        android:layout_margin="20dp"
        android:inputType="textEmailSubject"/>

    <Button
        android:textColor="@color/white"
        android:background="#6D4DA6"
        android:layout_margin="20dp"
        android:id="@+id/btn_save"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>