<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20sp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <TextView
        android:layout_margin="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#66CA6A"
        android:textSize="25sp"
        android:text="@string/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_fullName"
        android:textSize="18sp"
        android:layout_margin="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@id/text_email"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="20sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_logout"
        android:textColor="#fff"
        android:background="#D5C32A"
        android:layout_gravity="center"
        android:layout_margin="20sp"
        android:text="@string/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>